# nodeflow

./: README.md  install.command  library.py  mac-install.command  mac-start.command  pyproject.toml  requirements.lock.txt  requirements.txt  start.command  win-install.bat  win-start.bat
artifacts/: manager.py
core/: artifact.py  composite.py  graph.py
gui/: __init__.py  app.py  canvas.py  main_window.py  node_factory.py  notebook_editor.py  panels.py  theme.py
nodeflow/: __init__.py  library.py  vcs.py
nodeflow/app/: __init__.py  main.py
nodeflow/artifacts/: __init__.py
nodeflow/core/: __init__.py  spec.py  subgraph.py  workflow.py
nodeflow/execution/: __init__.py  cache.py  dag.py  engine.py  notebook.py
nodeflow/gui/: canvas.py  chooser.py  main_window.py  major_view.py  node_factory.py  panels.py  persistence.py  theme.py  viewers.py
nodeflow/plugins/: api.py  loader.py
nodeflow/sdk/: __init__.py  context.py  runtime.py
nodeflow/serialization/: __init__.py  builtins.py  registry.py
nodeflow/templates/: __init__.py  builtin.py
plugins/: __init__.py
serialization/: builtins.py
