[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nodeflow"
version = "0.1.0"
description = "A Blender Geometry Nodes-inspired visual workflow system for Jupyter notebooks."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "NodeFlow" }]
dependencies = [
    "pydantic>=2.7",
    "networkx>=3.3",
    "papermill>=2.6",
    "nbformat>=5.10",
    "nbclient>=0.10",
    "ipykernel>=6.29",
    "joblib>=1.4",
    "pyarrow>=16",
    "pandas>=2.2",
    "scikit-learn>=1.4",
    "pyyaml>=6.0",
    "matplotlib>=3.8",
    "reportlab>=4.1",
    "GitPython>=3.1",
]

[project.optional-dependencies]
gui = ["PySide6>=6.7", "NodeGraphQt>=0.6"]
dev = ["pytest>=8.2", "ruff>=0.4"]

[project.scripts]
nodeflow = "nodeflow.app.main:main"

[tool.setuptools.packages.find]
include = ["nodeflow*"]

[tool.setuptools.package-data]
nodeflow = ["templates/*.yaml", "templates/*.ipynb", "templates/notebooks/*.ipynb"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = ["ignore::DeprecationWarning"]
markers = [
    "gui: tests that require the PySide6/NodeGraphQt stack",
    "slow: tests that execute notebooks via papermill",
]

[tool.ruff]
line-length = 100
target-version = "py311"
# Generated artifacts (immutable runs, materialized template notebooks) are not source.
extend-exclude = ["runs", "**/runs/**", "**/notebooks/**", "**/executed.ipynb", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
# E501: long lines tolerated; UP042: the explicit `class X(str, Enum)` pattern is intentional
# (kept for clarity / pydantic friendliness) rather than enum.StrEnum.
ignore = ["E501", "UP042"]
